tests/resources/errors/errors_destructors10.ac
import std;
import std.Error;

struct TestError :: *Error {
    const char* get_name() const {
        return "TestError";
    }
    const char* get_message() const {
        return "error raised!";
    }

    ~TestError() {
        std.print("destructor called!");
    }
}

void foo() raises TestError {
    raise TestError{};
}

void main() {
    try err: foo() {
        std.print("caught error!");
    };
    std.print("end!");
}